<resources>
    <string name="app_name">Kalkulator BMI</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Wzrost</string>
    <string name="height">Waga</string>
    <string name="hello">Witaj Użytkowniku</string>
    <string name="start">Start BMI</string>
    <string name="quiz">Start QUIZ</string>
    <string name="textQuiz">Twój wynik</string>
    <string name="scoreQuiz">0</string>
    <string name="textCountry">Raport COVID-19 dla wybranych krajów :</string>
    <string name="chart">Start Wykres</string>
    <string name="poland">Polska</string>
    <string name="china">Chiny</string>
    <string name="italy">Włochy</string>
    <string name="quit">QUIT</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>
    <string name="age">Wiek</string>
    <string name="spora_niedowaga">Spora niedowaga</string>
    <string name="niedowaga">Niedowaga</string>
    <string name="normalna">Normalna</string>
    <string name="nadwaga">"Nadwaga</string>
    <string name="otylosc">Otyłość</string>

</resources>
